se subio la version de gradle a la 7.4.1, aun se puede subir la version de gradle.
se cambio de grovvy a kotlin dsl

se subio la version de sdk al 34

se puede eliminar el archivo versions.gradle

se implemento los catalogos de versiones, se pueden implementar los plugins de proyecto y app en los catalogs

se pudo compilar de forma existosa la buildvariants rootDebug

utilizar la jdl 17

--- a/gradle.properties
+++ b/gradle.properties
@@ -40,3 +40,5 @@ org.gradle.jvmargs=-Xmx1536m
 # In Android Studio,
 # For Mac go to the Preferences > Build, Execution, Deployment > Compiler and uncheck the configure on demand.
 # For Linux/Windows go to the File > Settings > Build, Execution, Deployment > Compiler and uncheck the configure on demand.
+
+kotlin.code.style=official
